examples/grammar
program     := { expression ";" }

expression  := or | declaration

declaration := "set" VARIABLE ["=" expression]

or          := and { "||" and }                                     -- left associative
and         := equality { "&&" equality }                           -- left associative
equality    := comparison { ("!=" | "==") comparison }              -- left associative
comparison  := term { (">" | ">=" | "<" | "<=") term }              -- left associative
term        := factor { ("+" | "-") factor }                        -- left associative
factor      := unary { ("*" | "/") unary }                          -- left associative
unary       := ("!" | "-") unary | primary
primary     := NUMBER | BOOLEAN | VARIABLE | "(" expression ")"

NUMBER      := any valid f64
BOOLEAN     := "true" | "false"
VARIABLE    := LETTER { LETTER | DIGIT | "_" }
